syntax = "proto3";

package temporal.server.api.history.v1;

option go_package = "go.temporal.io/server/api/history/v1;history";

import "google/protobuf/timestamp.proto";

import "temporal/api/enums/v1/event_type.proto";
import "temporal/api/history/v1/message.proto";

message TransientWorkflowTaskInfo {
    reserved 1;
    reserved 2;

    // A list of history events that are to be appended to the "real" workflow history.
    repeated temporal.api.history.v1.HistoryEvent history_suffix = 3;
}

// VersionHistoryItem contains signal eventId and the corresponding version.
message VersionHistoryItem {
    int64 event_id = 1;
    int64 version = 2;
}

// VersionHistory contains the version history of a branch.
message VersionHistory {
    bytes branch_token = 1;
    repeated VersionHistoryItem items = 2;
}

// VersionHistories contains all version histories from all branches.
message VersionHistories {
    int32 current_version_history_index = 1;
    repeated VersionHistory histories = 2;
}

message TaskKey {
    int64 task_id = 1;
    google.protobuf.Timestamp fire_time = 2;
}

message TaskRange {
    TaskKey inclusive_min_task_key = 1;
    TaskKey exclusive_max_task_key = 2;
}

// StrippedHistoryEvent is a stripped down version of HistoryEvent that only contains very minimum number of fields.
// IMPORTANT: field numbers must be exactly the same as in history.HistoryEvent message.
message StrippedHistoryEvent {
    int64 event_id = 1;
    temporal.api.enums.v1.EventType event_type = 3;
    int64 version = 4;
}

message StrippedHistoryEvents {
    repeated StrippedHistoryEvent events = 1;
}
